<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.example.platys.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/register_motion_scene"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/register_fragment_scene">

        <ImageView
            android:id="@+id/registerImageView"
            android:layout_width="@dimen/login_screen_img_size"
            android:layout_height="@dimen/login_screen_img_size"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_person_pin"
            app:layout_constraintBottom_toTopOf="@id/tlEmail"
            android:layout_marginBottom="@dimen/standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:soundEffectsEnabled="false" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:hint="@string/email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tlEmail"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btRegister"
            style="@style/Widget.App.ButtonText"
            android:layout_width="@dimen/login_button_width"
            android:layout_height="@dimen/text_field_height"
            android:layout_marginTop="@dimen/standard_margin"
            android:background="@drawable/oval_button_shape"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:onClick="@{() -> viewmodel.registerButtonClicked()}"
            app:layout_constraintTop_toBottomOf="@id/tlPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.progressindicator.ProgressIndicator
            android:id="@+id/registerIndicator"
            style="@style/Widget.App.ProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tlPassword" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>
